k8s/geth-el-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: geth-el-pod
  namespace: devnet
  labels:
    app: geth-el
spec:
  containers:
    - name: geth-el
      image: ethereum/client-go:latest
      imagePullPolicy: Always
      command:
        - sh
        - -c
        - |
          geth --datadir=/data/execution init /data/execution/genesis.json && \
          geth --datadir /data/execution \
          --http \
          --http.api=eth,net,web3 \
          --http.addr=0.0.0.0 \
          --http.corsdomain=* \
          --http.vhosts=* \
          --ws \
          --ws.api=eth,net,web3 \
          --ws.addr=0.0.0.0 \
          --ws.origins=* \
          --authrpc.vhosts=* \
          --authrpc.addr=0.0.0.0 \
          --authrpc.jwtsecret=/data/execution/jwtsecret \
          --allow-insecure-unlock \
          --nodiscover \
          --syncmode=full \
          --verbosity=4
      ports:
        - containerPort: 32000
        - containerPort: 8551
        - containerPort: 8545
        - containerPort: 8546
        - containerPort: 9001
      volumeMounts:
        - name: peer-volume
          mountPath: /data
  restartPolicy: Always
  volumes:
    - name: peer-volume
      persistentVolumeClaim:
        claimName: peer-pvc
