k8s/geth-el-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: geth-el-svc
  namespace: devnet
spec:
  type: ClusterIP
  selector:
    app: geth-el
  ports:
    - protocol: TCP
      port: 32000
      targetPort: 32000
      name: tcp-discovery
    - protocol: UDP
      port: 32000
      targetPort: 32000
      name: udp-discovery
    - protocol: TCP
      port: 8551
      targetPort: 8551
      name: engine-rpc
    - protocol: TCP
      port: 8545
      targetPort: 8545
      name: rpc
    - protocol: TCP
      port: 8546
      targetPort: 8546
      name: ws
    - protocol: TCP
      port: 9001
      targetPort: 9001
      name: metrics
