k8s/geth-el-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geth-el-ingress
  namespace: devnet
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: devnet.xbaas.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: geth-el-svc
                port:
                  number: 8545
